feat(rest): :sparkles: critères de filtre supplémentaires
Ajout du filtre par code insee, code posal ou encore ville

#fix 60